@@ -1,8 +1,14 @@
 2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>
 
     Bug 3429707:
+    * org/jfree/chart/annotations/TextAnnotation.java
+    (setRotationAnchor): Added missing argument check, Bug #3428870;
+
+2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>
+
+    Bug 3429707:
     * org/jfree/chart/axis/LogAxis.java
-    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit
+    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit,
     (refreshTicksVertical): Likewise;
 
 2011-10-19  David Gilbert <david.gilbert@object-refinery.com>
